	  the "Go To Line" prompt.  Also, set backupstring before doing
	  anything else, add one minor efficiency tweak, and preserve
	  the text of the statusbar no matter what when switching from
	  the search prompt to the "Go To Line" prompt, since the
	  toggling works both ways now and non-numeric text shouldn't be
	  lost when going only one of those ways. (DLR)
  findnextstr()
	- Take the no_sameline parameter after can_display_wrap and
	  wholewords, not after all other parameters. (DLR)
	- Maintain current_y's value when moving up or down lines so
	  that smooth scrolling works correctly. (DLR)
- utils.c:
  mark_order()
	- Add check for MARK_ISSET's not being set. (DLR)
- winio.c:
  unget_kbinput()
	- New function used as a wrapper for ungetch(). (DLR)
  get_kbinput()
	- When reading an escape sequence, set get_verbatim_kbinput()'s
	  new first parameter to the first character of the sequence
	  instead of putting that character back and reading the entire
	  sequence afterwards. (DLR)
  get_verbatim_kbinput()
	- Add new parameter first.  If first isn't ERR, make it the
	  first character in the returned sequence instead of reading
	  the first character in via blocking input. (DLR)
  get_mouseinput()
	- Consolidate two if statements to increase efficiency. (DLR)
	- Check kbinput against metaval instead of (erroneously) ctrlval
	  when putting back a meta sequence. (DLR)
	- If there are more than MAIN_VISIBLE shortcuts available, only
	  register clicks on the first MAIN_VISIBLE shortcuts, since
	  bottombars() only shows that many shortcuts. (DLR)
  check_statblank()
	- Rename to check_statusblank(), and rename its associated
	  global int statusblank too. (DLR)
  nanogetstr()
	- Refresh the screen when Ctrl-L is pressed at the statusbar
	  prompt, as Pico does. (DLR)
	- Always return the key pressed by the user. (DLR)
  statusq()
	- Rework slightly to reset the cursor position when the user
	  hits Enter as well as Cancel.  This means that resetstatuspos