@@ -149,6 +149,11 @@ CVS code -
 	  the search prompt to the "Go To Line" prompt, since the
 	  toggling works both ways now and non-numeric text shouldn't be
 	  lost when going only one of those ways. (DLR)
+  do_replace_loop()
+	- Miscellaneous cleanups: set current to real_current and
+	  current_x to current_x_save, only turn the mark off and call
+	  edit_refresh() if the mark was originally on, and make
+	  length_change a ssize_t. (DLR)
   findnextstr()
 	- Take the no_sameline parameter after can_display_wrap and
 	  wholewords, not after all other parameters. (DLR)
